--- a/Nomina/Css/empleado.css
+++ b/Nomina/Css/empleado.css
@@ -1,10 +1,11 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Freeman&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Noto+Serif:ital@1&family=Pangolin&family=Pathway+Extreme:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Poppins:wght@200;400&display=swap');
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 .container{
-    position: relative;
-    margin-top: 10px;
-    background-color: rgb(217, 223, 223);
+    margin-top: 5px;
 }
 
 .tituloempleado{
@@ -12,8 +13,36 @@
     justify-content: center;
     text-align: center;
     margin-top: 30px;
-    font-family: "Freeman", sans-serif;
-    font-weight: 200;
+    font-family: "Pathway Extreme", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400px;
     font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
 }
+
+
+.prueba label{
+    font-family: "Pathway Extreme", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400px;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 200;
+    font-weight: 500;  
+      
+}
+
+.registrar {
+    position: absolute;
+    top: -10px;
+
+}
+
+
+
+
+
+
+
   
