--- a/Nomina/Css/empleado.css
+++ b/Nomina/Css/empleado.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Noto+Serif:ital@1&family=Pangolin&family=Pathway+Extreme:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Poppins:wght@200;400&display=swap');
 *{
     box-sizing: border-box;
-    margin: 0;
+    margin: 0px 0px 10px;
     padding: 0;
 }
-.container{
-    margin-top: 5px;
-}
+
+
 
 .tituloempleado{
     display: flex;
@@ -17,8 +16,7 @@
     font-optical-sizing: auto;
     font-weight: 400px;
     font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
+    font-variation-settings:"wdth" 100;
 }
 
 
@@ -27,10 +25,9 @@
     font-optical-sizing: auto;
     font-weight: 400px;
     font-style: normal;
-    font-variation-settings:
-      "wdth" 200;
+    font-variation-settings:"wdth" 200;
     font-weight: 500;  
-      
+    
 }
 
 .registrar {
