--- a/Nomina/Css/empleado.css
+++ b/Nomina/Css/empleado.css
@@ -76,6 +76,8 @@ p {
     height: 30px; 
     padding: 5px; 
     font-size: 14px;  
+    position: relative;
+    margin-left: 350px;
   }
 
   
@@ -90,11 +92,19 @@ p {
     align-items: center;
     border: 2px solid #ddd;
     position: relative;
+    
   }
   
   .circle-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    position: relative;
+    margin-left: 20px;
   }
   
+  .foto{
+    
+    position: relative;
+    margin-left: 480px;
+  }
