lista de empleados
se agrego lista de empleados

--- a/Nomina/Css/menu.css
+++ b/Nomina/Css/menu.css
@@ -42,7 +42,7 @@ body {
     padding-top: 90px;
     transition: left 0.3s ease; /* Agregar la transición */
     z-index: 900;
-    background-color: #987698;
+    background-color: var(--colorPrincipal);
 }
 
 
@@ -61,7 +61,7 @@ body {
     color: white;
     text-decoration: none;
     display: block;
-    padding: 5px;
+    padding: 10px;
     transition: background-color 0.3s ease;
     position: relative;
     
